SC6EndTurnClicked&SC22CardClicked